fixed text align in video page

--- a/src/Components/VideoPage/VideoPage.css
+++ b/src/Components/VideoPage/VideoPage.css
@@ -14,7 +14,8 @@
     display: flex;
     flex-direction: column;
     padding-right: 10%;
-    text-align: center;
+    text-align: start;
+  
 }
 .videoPage__right{
     width: 50%;
@@ -70,12 +71,14 @@ display: flex;
     .videoPage{
        flex-direction: column;
        padding: 150px 0;
+       
    
     }
     .videoPage__left{
         width: 100%;
         height: 50%;
         align-items: center;
+        text-align: center;
     }
     .videoPage__right{
         width: 100%;
